update navbar, footer and contact page

--- a/src/locales/de/de-translation.json
+++ b/src/locales/de/de-translation.json
@@ -567,11 +567,11 @@
         "title": "Kontaktinformationen",
         "address": {
           "title": "Adresse",
-          "value": "Atatürk Mah. Ertuğrul Gazi Cad. Nr. 21 Etage: 3 Ataşehir, Istanbul"
+          "value": "Başıbüyük Yolu Cad. No:16 Kentplus Centrium B1 Block, Maltepe/Istanbul"
         },
         "phone": {
           "title": "Telefon",
-          "value": "+90 (216) 123 45 67"
+          "value": "+90 530 378 52 81"
         },
         "email": {
           "title": "E-Mail",
