--- a/src/locales/en/en-translation.json
+++ b/src/locales/en/en-translation.json
@@ -573,11 +573,11 @@
         "title": "Contact Information",
         "address": {
           "title": "Address",
-          "value": "Atatürk Mah. Ertuğrul Gazi Cad. No: 21 Floor: 3 Ataşehir, Istanbul"
+          "value": "Başıbüyük Yolu Cad. No:16 Kentplus Centrium B1 Block, Maltepe/Istanbul"
         },
         "phone": {
           "title": "Phone",
-          "value": "+90 (216) 123 45 67"
+          "value": "+90 530 378 52 81"
         },
         "email": {
           "title": "Email",
