--- a/src/locales/tr/tr-translation.json
+++ b/src/locales/tr/tr-translation.json
@@ -580,11 +580,11 @@
         "title": "İletişim Bilgileri",
         "address": {
           "title": "Adres",
-          "value": "Atatürk Mah. Ertuğrul Gazi Cad. No: 21 Kat: 3 Ataşehir, İstanbul"
+          "value": "Başıbüyük Yolu Cad. No:16 Kentplus Centrium B1 Blok, Maltepe/İstanbul"
         },
         "phone": {
           "title": "Telefon",
-          "value": "+90 (216) 123 45 67"
+          "value": "+90 530 378 52 81"
         },
         "email": {
           "title": "E-posta",
